2006-04-24  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/acinclude.m4: Add CoreServices framework to link libs on
	Darwin.

	* vm/sqUnixMain.c (sqGetFilenameFromString): Resolve links and
	aliases if resolveAliases is nonzero.

	* vm/mac-alias.c: Added.

	* plugins/AioPlugin/Makefile.inc (XCPPFLAGS): XCPPFLAGS defines
	SQAIO_H="sqaio.h".

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds): Reset
	interruptCheckCounter iff > 1/25 sec has elapsed.

----------------------------------------------------------------
	
2006-04-23  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* 3.9-6 released.

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds): Reset
	interrupt check counter at end of sleep.

	* config/config.h.in: Add HAVE_NANOSLEEP.

	* vm/acinclude.m4: Define HAVE_NANOSLEEP if nanosleep() available.

	* vm/aio.c (aioSleep): For small timeouts always nanosleep() if
	available.

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds): Obey the
	requested timeout without testing for overdue wakeup ticks.

----------------------------------------------------------------
	
2006-04-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* 3.9-4 released.

	* doc/3.9-4.RELEASE_NOTES: Created.

2006-04-18  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/FloatMathPlugin/Makefile.inc (CFLAGS): Define NO_ISNAN=1.

	* vm-display-X11/sqUnixX11.c (handleEvent): Suppress reporting key
	up when KeyRelease event is from autorepeat.

2006-04-17  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/aio.c (aioSleep): Sleep in aioPoll (i.e, select) or
	nanosleep, for timeouts < 1 timeslice.

	* vm/sqUnixMain.c (ioRelinquishProcessorForMicroseconds):
	Nanosecond sleep moved to aioSleep().

	* vm-display-X11/sqUnixX11.c (display_ioRelinquishProcessorForMicroseconds): 
	* vm-display-Quartz/sqUnixQuartz.m (display_ioRelinquishProcessorForMicroseconds):